- Fixed positioning on banner :before - Fixed Other Properties key span wrapping and updated styling - Removed unnecessary styling from global.css

--- a/src/global.scss
+++ b/src/global.scss
@@ -123,8 +123,3 @@ a {
         text-decoration: none;
     }
 }
-
-// Generic helper classes
-.title-case {
-    text-transform: capitalize;
-}
